--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mes Projets Web</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Mes Essais Web</h1>
+    </header>
+    <main>
+        <ul id="project-list">
+            <li><a href="projet1/page1.html">Projet 1 - Page 1</a></li>
+            <li><a href="projet2/index.html">Projet 2 - Page d'accueil</a></li>
+            <li><a href="dnd/gestion_personnages.html">Outil D&D - Gestion des Personnages</a></li>
+            <li><a href="starwars/liste_vaisseaux.html">Projet Star Wars - Liste des Vaisseaux</a></li>
+            </ul>
+    </main>
+    <footer>
+        <p>&copy; 2025 - Vos Essais Web</p>
+    </footer>
+</body>
+</html>
