--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <main>
         <ul id="project-list">
-            <li><a href="projet1/page1.html">Projet 1 - Page 1</a></li>
+            <li><a href="Tests/calendrier.html">Test - Calendrier</a></li>
             <li><a href="projet2/index.html">Projet 2 - Page d'accueil</a></li>
             <li><a href="dnd/gestion_personnages.html">Outil D&D - Gestion des Personnages</a></li>
             <li><a href="starwars/liste_vaisseaux.html">Projet Star Wars - Liste des Vaisseaux</a></li>
