--- a/index.html
+++ b/index.html
@@ -11,12 +11,37 @@
         <h1>Mes Essais Web</h1>
     </header>
     <main>
-        <ul id="project-list">
-            <li><a href="Tests/calendrier.html">Test - Calendrier</a></li>
-            <li><a href="projet2/index.html">Projet 2 - Page d'accueil</a></li>
-            <li><a href="dnd/gestion_personnages.html">Outil D&D - Gestion des Personnages</a></li>
-            <li><a href="starwars/liste_vaisseaux.html">Projet Star Wars - Liste des Vaisseaux</a></li>
+        <section class="project-category" style="background-image: url('images/fond_general.jpg');">
+            <h2>Projets Généraux</h2>
+            <ul class="project-list">
+                <li><a href="Tests/calendrier.html">Test - Calendrier</a></li>
+                <li><a href="projet2/index.html">Projet 2 - Page d'accueil</a></li>
             </ul>
+        </section>
+
+        <section class="project-category" style="background-image: url('images/fond_dnd.jpg');">
+            <h2>Donjons & Dragons</h2>
+            <ul class="project-list">
+                <li><a href="dnd/gestion_personnages.html">Gestion des Personnages</a></li>
+                <li><a href="dnd/aide_de_jeu.html">Aide de Jeu Interactive</a></li>
+            </ul>
+        </section>
+
+        <section class="project-category" style="background-image: url('images/fond_starwars.jpg');">
+            <h2>Star Wars</h2>
+            <ul class="project-list">
+                <li><a href="starwars/liste_vaisseaux.html">Liste des Vaisseaux</a></li>
+                <li><a href="starwars/creation_perso.html">Création de Personnage</a></li>
+            </ul>
+        </section>
+
+        <section class="project-category" style="background-image: url('images/fond_pro.jpg');">
+            <h2>Outils Professionnels</h2>
+            <ul class="project-list">
+                <li><a href="outils_pro/visualisation_donnees.html">Visualisation de Données</a></li>
+                <li><a href="outils_pro/automatisation_tache.html">Automatisation de Tâche</a></li>
+            </ul>
+        </section>
     </main>
     <footer>
         <p>&copy; 2025 - Vos Essais Web</p>
