--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mes Projets Web</title>
+    <title>Projets CDK</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Mes Essais Web</h1>
+        <h1>Projets CDK</h1>
     </header>
     <main>
         <section class="project-category" style="background-image: url('images/fond_general.jpg');">
             <h2>Projets Généraux</h2>
-            <ul class="project-list">
+            <ul class="project-list" style="center">
                 <li><a href="Tests/calendrier.html">Test - Calendrier</a></li>
                 <li><a href="projet2/index.html">Projet 2 - Page d'accueil</a></li>
             </ul>
