--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Projets CDK</h1>
     </header>
     <main>
-        <section class="project-category" style="background-image: url('images/fond_general.jpg');">
+        <section class="project-category" style="background-image: url('images/1366661.png');">
             <h2>Projets Généraux</h2>
             <ul class="project-list" style="center">
                 <li><a href="Tests/calendrier.html">Test - Calendrier</a></li>
