--- a/Tests/calendrier.html
+++ b/Tests/calendrier.html
@@ -96,7 +96,7 @@
         @media print {
             @page { size: landscape; margin: 1cm; }
             body { background-color: white !important; padding: 0; margin: 0; -webkit-print-color-adjust: exact; print-color-adjust: exact; }
-            .calendar-container { box-shadow: none; width: 100%; max-width: none; margin: 0; padding: 0; border-radius: 0; background-image: none !important; }
+            .calendar-container { box-shadow: none; width: 100%; max-width: none; margin: 0; padding: 0; border-radius: 0; /*background-image: none !important;*/ }
             .background-controls, .calendar-header button, #printButton, .legend { display: none; }
             .calendar-header { justify-content: center; background: none; padding: 0 0 10px 0; }
             .calendar-header h2 { font-size: 1.5em; }
