--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projets CDK</title>
+    <title>CDK</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,37 +14,37 @@
         <section class="project-category" style="background-image: url('images/1366661.png');">
             <h2>Projets Généraux</h2>
             <ul class="project-list" style="center">
-                <li><a href="Tests/calendrier.html">Test - Calendrier</a></li>
-                <li><a href="projet2/index.html">Projet 2 - Page d'accueil</a></li>
+                <li><a href="Tests/calendrier.html">Calendrier Mélina</a></li>
+                <li><a href="projet2/index.html">--</a></li>
             </ul>
         </section>
 
         <section class="project-category" style="background-image: url('images/fond_dnd.jpg');">
             <h2>Donjons & Dragons</h2>
             <ul class="project-list">
-                <li><a href="dnd/gestion_personnages.html">Gestion des Personnages</a></li>
-                <li><a href="dnd/aide_de_jeu.html">Aide de Jeu Interactive</a></li>
+                <li><a href="dnd/gestion_personnages.html">Feuille de Personnage</a></li>
+                <li><a href="dnd/aide_de_jeu.html">--</a></li>
             </ul>
         </section>
 
         <section class="project-category" style="background-image: url('images/fond_starwars.jpg');">
             <h2>Star Wars</h2>
             <ul class="project-list">
-                <li><a href="starwars/liste_vaisseaux.html">Liste des Vaisseaux</a></li>
-                <li><a href="starwars/creation_perso.html">Création de Personnage</a></li>
+                <li><a href="starwars/liste_vaisseaux.html">--</a></li>
+                <li><a href="starwars/creation_perso.html">--</a></li>
             </ul>
         </section>
 
         <section class="project-category" style="background-image: url('images/fond_pro.jpg');">
             <h2>Outils Professionnels</h2>
             <ul class="project-list">
-                <li><a href="outils_pro/visualisation_donnees.html">Visualisation de Données</a></li>
-                <li><a href="outils_pro/automatisation_tache.html">Automatisation de Tâche</a></li>
+                <li><a href="outils_pro/visualisation_donnees.html">WebProjet</a></li>
+                <li><a href="outils_pro/automatisation_tache.html">--</a></li>
             </ul>
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 - Vos Essais Web</p>
+        <p>&copy; 2025 - Essais Web CDK</p>
     </footer>
 </body>
 </html>
