--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <section class="project-category" style="background-image: url('images/fond_pro.jpg');">
             <h2>Outils Professionnels</h2>
             <ul class="project-list">
-                <li><a href="outils_pro/visualisation_donnees.html">WebProjet</a></li>
+                <li><a href="Tests/WebProjet_SQL.html">WebProjet</a></li>
                 <li><a href="outils_pro/automatisation_tache.html">--</a></li>
             </ul>
         </section>
