--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section class="project-category" style="background-image: url('images/fond_starwars.jpg');">
             <h2>Star Wars</h2>
             <ul class="project-list">
-                <li><a href="starwars/liste_vaisseaux.html">--</a></li>
+                <li><a href="Tests/SwFaD.html">--</a></li>
                 <li><a href="starwars/creation_perso.html">--</a></li>
             </ul>
         </section>
