--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <section class="project-category" style="background-image: url('images/fond_dnd.jpg');">
             <h2>Donjons & Dragons</h2>
             <ul class="project-list">
-                <li><a href="dnd/gestion_personnages.html">Feuille de Personnage</a></li>
+                <li><a href="DnD/perso.html">Feuille de Personnage</a></li>
                 <li><a href="dnd/aide_de_jeu.html">--</a></li>
             </ul>
         </section>
